Explaining class setup

--- a/paper/agile-teaching.Rnw
+++ b/paper/agile-teaching.Rnw
@@ -130,9 +130,15 @@ Using GitHub PRs as a platform helps the creation of other workflows and work pa
 
 Since these PRs happen in separate repositories, we need a single, centralized place as a {\em platform} that helps to have an unified view of the whole class; this is carried out via a single repository, where the students submit a PR to a file that is different for each objective, and which triggers a workflow with a series of baseline tests of correctness of the PR submitted for clearing every objective. When the student overcomes the objective, a mark is inserted into the same file by the professor. Automatic workflows then analyze these files to generate a data file that records these events. This file is the single source of truth for the state of every objective for every student, and can be analyzed to study the progress of the class.
 
-After the course is over, student nicks are anonymized with a one-way hash so that privacy is preserved\footnote{Even if students are warned to use whatever GitHub nick they want, including an anonymous, class-only one. The only thing needed for the teacher is to be able to clearly identify which student corresponds to every nick}. These are publicly available at \url{https://github.com/JJ/ivR}
+In general, we strive to make feedback as fast as possible, so that students can react to it in a timely way. The general rule is that we will react to requests for feedback (which are made either by a comment with mention in a pull request or using the specific mechanism GitHub has to request reviews) in less than 48h\footnote{Exception being some weekends, and official holidays}. A fast feedback is essential for the student to still have whatever conceptions or assumptions fresh so that they can be modified.
 
-Data has been collected in this way for three consecutive school years: 2021-22, 2022-23 and 2023-24. Additional data is collected in the form of surveys for specific events or activities, as well as at the beginning and at the end of every year.
+This implies a certain workload, mainly in the early stages when students submit their pull requests at pretty much the same time. However, early objectives require less effort to review than later ones; and when these later ones arrive, the teacher only has to chime in when one to three other students have already approved the submission. Although it is rather infrequent than no further suggestions have to been made, most frequent errors have already been ironed out by these reviews and request for changes. Additionally, a {\em frequent errors} specific for every objective is created, and this is specific for every school year. This is used by the students as a check list before submitting the review, but also, since it is created as submissions are reviewed, also by the teacher for quoting when these frequent errors show up in a pull request made by a student. In some cases specific errors that can be automatically checked show up (for instance, using capital letters in the names of files, something that is generally discouraged in repository-checked projects) they are incorporated into the automatic tests the PRs undergo when submitted to the central repository, so that they do not require additional rounds of reviewing by the teacher, releasing time needed for in-depth examination and feedback to the student.
+
+In general, workload for the teacher is much more intensive than it is for {\em summative} evaluation or traditional {\em flipped learning} classes. However, the system has been set up so that most of the time spent by the teacher is effectively spent in giving constructive feedback to the student, so that they can reach their learning objectives.
+
+After the course is over, student GitHub nicks are anonymized with a one-way hash so that privacy is preserved\footnote{Even if students are warned to use whatever GitHub nick they want, including an anonymous, class-only one. The only thing needed for the teacher is to be able to clearly identify which student corresponds to every nick}. These are publicly available at \url{https://github.com/JJ/ivR}
+
+Data has been collected in this way for three consecutive school years: 2021-22, 2022-23 and 2023-24\footnote{Incomplete at the time of this writing}. Additional data is collected in the form of surveys for specific events or activities, as well as at the beginning and at the end of every year\footnote{These surveys are validated every year and slightly changed according to feedback. How specific surveys are validated will be mentioned when used}.
 
 
 
