--- a/paper/agile-teaching.Rnw
+++ b/paper/agile-teaching.Rnw
@@ -128,7 +128,7 @@ The student needs to pass objective number 5 to get a passing grade; every objec
 
 Using GitHub PRs as a platform helps the creation of other workflows and work patterns around these PRs. Every time a PR submitted to the "central" repository passes tests, five random reviewers are drawn from the pool of other students that have already cleared that objective. Every objective, then, receives feedback not only from the teacher, but also from their peers. Again, this fits the agile mindset, but when students need to verbalize the issues with a PR by a colleague, it helps them settle the knowledge they have acquired in the objective they already passed. Additionally, it helps them understand the need for a efficient communication, through PRs, with other members of the team, and to use effectively these tools, closing the gap between classes and actual work\footnote{These reviews are made for additional credit; reaching all the objectives includes only 70\% of the final grade}.
 
-Since these PRs happen in separate repositories, we need a single, centralized place as a {\em platform} that helps to have an unified view of the whole class; this is carried out via a single repository, where the students submit a PR to a file that is different for each objective, and which triggers a workflow with a series of baseline tests of correctness of the PR submitted for clearing every objective. When the student overcomes the objective, a mark is inserted into the same file by the professor. Automatic workflows then analyze these files to generate a data file that records these events. This file is the single source of truth for the state of every objective for every student, and can be analyzed to study the progress of the class.
+Since these PRs happen in separate repositories (one for every student), we need a single, centralized place as a {\em platform} that helps to have an unified view of the whole class; this is carried out via a single repository, where the students submit a PR to a file that is different for each objective, and which triggers a workflow with a series of baseline tests of correctness of the PR submitted for clearing every objective. When the student overcomes the objective, a mark is inserted into the same file by the professor. Automatic workflows then analyze these files to generate a data file that records these events. This file is the single source of truth for the state of every objective for every student, and can be analyzed to study the progress of the class.
 
 In general, we strive to make feedback as fast as possible, so that students can react to it in a timely way. The general rule is that we will react to requests for feedback (which are made either by a comment with mention in a pull request or using the specific mechanism GitHub has to request reviews) in less than 48h\footnote{Exception being some weekends, and official holidays}. A fast feedback is essential for the student to still have whatever conceptions or assumptions fresh so that they can be modified.
 
@@ -138,11 +138,11 @@ In general, workload for the teacher is much more intensive than it is for {\em 
 
 During face to face classes, time is spent either addressing issues with specific students, or making small-group explanations to those that have just passed an objective. These whiteboard (never slides) expositions are adapted to specific circumstances of the student of group of students (early submitters, or late ones, for instance). In general, classes are working spaces where students and teacher interact with each other.
 
-After the course is over, student GitHub nicks are anonymized with a one-way hash so that privacy is preserved\footnote{Even if students are warned to use whatever GitHub nick they want, including an anonymous, class-only one. The only thing needed for the teacher is to be able to clearly identify which student corresponds to every nick}. These are publicly available at \url{https://github.com/JJ/ivR}
+After the course is over, student GitHub nicks are anonymized with a one-way hash so that privacy is preserved\footnote{Even if students are warned to use whatever GitHub nick they want, including an anonymous, class-only one. The only thing needed for the teacher is to be able to clearly identify which student corresponds to every nick}. These are publicly available at \url{https://github.com/JJ/ivR}.
 
-Data has been collected in this way for three consecutive school years: 2021-22, 2022-23 and 2023-24\footnote{Incomplete at the time of this writing}. Additional data is collected in the form of surveys for specific events or activities, as well as at the beginning and at the end of every year\footnote{These surveys are validated every year and slightly changed according to feedback. How specific surveys are validated will be mentioned when used}.
+Data has been collected in this way for three consecutive school years: 2021-22, 2022-23 and 2023-24\footnote{Incomplete at the time of this writing}. Additional data is collected in the form of surveys for specific events or activities, as well as at the beginning and at the end of every year\footnote{These surveys are validated every year and slightly changed according to student feedback. How specific surveys are validated will be mentioned when used}.
 
-
+Next we will choose metrics and analyze the kind of information we can obtain from them, and how they can be used to improve learning outcomes.
 
 \section{Results}
 \label{sec:results}
