--- a/paper/agile-teaching.Rnw
+++ b/paper/agile-teaching.Rnw
@@ -158,8 +158,22 @@ In the second case, there might be a small delay between the moment the objectiv
 
 In order to be able to normalize and compare different courses, these dates are counted from the day the course start.
 
-<<initial, echo=FALSE>>=
-load("data/entregas-data.rda")
+<<initial, echo=FALSE, warning=FALSE, fig.pos="h!tb", fig.env="figure*", fig.cap="Segment plot showing the number of days from the beginning of the course when objectives (indicated by color) have been submitted, with the segment end indicating when they have been approved. From bottom to top, this has been done for course 2021-22, 22-23 and 23-24 (still ongoing). The gap shows the period between the \"ordinary\" and \"extraordinary\" evaluation." >>=
+library(ggplot2)
+load("../data/entregas-data.rda")
+# sort entregas.data by Curso and Entrega.Days
+entregas.data <- entregas.data[order(entregas.data$Curso, entregas.data$Entrega.Days),]
+entregas.data$idu <- 1:nrow(entregas.data)
+
+ggplot(entregas.data, aes(x=Entrega.Days, y=idu, color=as.factor(Objetivo))) + scale_color_brewer(type="div") +
+  geom_segment(data=entregas.data,aes(xend=Entrega.Days+Days.to.Superacion, yend=idu)) +
+  geom_point(data=entregas.data,shape=0,aes(x=Entrega.Days, y=idu, color=as.factor(Objetivo))) +
+  geom_point(data=entregas.data,shape=4,aes(x=Entrega.Days+Days.to.Superacion, y=idu, color=as.factor(Objetivo))) +
+  xlim(0,160)+
+  scale_y_discrete(limits=rev(levels(entregas.data$idu))) +
+  labs(x="Days from the beginning", y="Order of submission", color="Objetivo") +
+  theme_bw() +
+  theme(legend.position="none")
 @
 
 \bibliographystyle{ACM-Reference-Format}
