--- a/paper/agile-teaching.Rnw
+++ b/paper/agile-teaching.Rnw
@@ -17,29 +17,13 @@
 \acmYear{2024}
 \acmDOI{XXXXXXX.XXXXXXX}
 
-%% These commands are for a PROCEEDINGS abstract or paper.
 \acmConference[ITICSE'24]{ITICSE'24}{June 03--05,  2018}{Milan, IT}
-%%
-%%  Uncomment \acmBooktitle if the title of the proceedings is different
-%%  from ``Proceedings of ...''!
-%%
-%%\acmBooktitle{Woodstock '18: ACM Symposium on Neural Gaze Detection,
-%%  June 03--05, 2018, Woodstock, NY}
 \acmISBN{978-1-4503-XXXX-X/18/06}
 
 \begin{document}
 
-%%
-%% The "title" command has an optional parameter,
-%% allowing the author to define a "short title" to be used in page headers.
 \title{Evaluative formation for agile teaching}
 
-%%
-%% The "author" command and its associated commands are used to define
-%% the authors and their affiliations.
-%% Of note is the shared affiliation of the first two authors, and the
-%% "authornote" and "authornotemark" commands
-%% used to denote shared contribution to the research.
 \author{JJ Merelo-Guervós}
 \email{jmerelo@ugr.es}
 \orcid{0000-0002-1385-9741}
@@ -114,7 +98,7 @@ The rest of the paper is organized as follows: next we will present the state of
 
 \section{State of the art}
 
-Learning analytics (LA) \cite{clow2013overview} has been applied to all kind of learning processes and subjects; this includes problem-based learning combined with formative assessment (FA); \cite{aljohani2013learning} mentions that learning analytics and formative assessment work well together since they both provide immediate feedback on the quality of the learning process; however, it can be argued that LA is an essential part of FA, since a deep understanding of the objectives achieved by students is needed in order to provide student-specific feedback. In general, however, LA will refer to additional, macro-measurements at a class level or analytics that compare student performance with other students or with previous years \cite{zhang2023learning}. This last paper reveals an increasing interest in FA combined with LA, with computer science courses leading the way, but with other disciplines and subjects also using it to improve success rates.
+Learning analytics (LA) \cite{clow2013overview} have been applied to all kind of learning processes and subjects; this includes problem-based learning combined with formative assessment (FA); \cite{aljohani2013learning} mentions that learning analytics and formative assessment work well together since they both provide immediate feedback on the quality of the learning process; however, it can be argued that LA is an essential part of FA, since a deep understanding of the objectives achieved by students is needed in order to provide student-specific feedback. In general, however, LA will refer to additional, macro-measurements at a class level or analytics that compare student performance with other students or with previous years \cite{zhang2023learning}. This last paper reveals an increasing interest in FA combined with LA, with computer science courses leading the way, but with other disciplines and subjects also using it to improve success rates.
 However, there are no general rules on what specific analytics should be used. In general, it is important to consider a learning (and possibly learner) model in order to be able to correctly measure learning outcomes and how they are reached. For instance, \cite{stanja2023formative} focuses on {\em conceptions}, how the students understand (or not) certain specific and common ideas, thus their process is geared towards using common assessment tools to measure understanding of those conceptions.  Student attitude and disposition towards learning can be as interesting as a model; however it is impossible to measure without explicitly asking the student; that is why authors such as \cite{tempelaar2020learning} propose a framework that combines traces with surveys in order to predict outcomes such as early drop out.
 
 What seems to be missing is, however, a single set of learning process measurements that can be used across any platform, subject, or way of deployment of formative assessment strategies. This is what we will try to propose and evaluate next, after exposing how our class has been set up in the next Section.
@@ -177,6 +161,7 @@ ggplot(entregas.data, aes(x=Entrega.Days, y=idu, color=as.factor(Objetivo))) + s
 @
 %
 This visualization already gives you an idea of the time needed to pass every objective: there is an abundance of long segments in the brown color, which is used for objectives number 2 and 4, the most complicated (thus receiving more credit). The slope that the proximal ends of the segments form also shows the rythm of submission, how it slows down during certain periods and then accelerates. But all this, besides giving you a general idea of how every course differs from the others, is not really a source of actionable intelligence, either from one year to the next or in real time for a specific course.
+
 
 
 \bibliographystyle{ACM-Reference-Format}
