--- a/paper/agile-teaching.Rnw
+++ b/paper/agile-teaching.Rnw
@@ -191,12 +191,17 @@ This visualization already gives you an idea of the time needed to pass every ob
 
 From this data we can try and extract some specific measure of individual performance, and the one that pops out most immediately is simply the difference between the time of submission and the time of approval, a measure of the effort the students put into learning the specific concepts and skills requires for every objective.
 
-<<histogram.diff, echo=FALSE, warning=FALSE, fig.pos="h!tb", fig.env="figure*", fig.cap="Histogram of the difference between the time of submission and the time of approval for every objective. Bins are 7 days wide">>=
+<<histogram.diff, echo=FALSE, warning=FALSE, fig.pos="h!tb", fig.cap="Histogram of the difference between the time of submission and the time of approval for every objective. Bins are 7 days wide">>=
 ggplot(entregas.data[ entregas.data$Curso == "21-22",], aes(x=Days.to.Superacion,fill="21-22")) + geom_histogram(alpha=0.2,binwidth=7,position="identity") + geom_histogram(data=entregas.data[ entregas.data$Curso == "22-23",],aes(x=Days.to.Superacion,fill="22-23"), alpha=0.2,binwidth=7) + geom_histogram(data=entregas.data[ entregas.data$Curso == "23-24",],aes(x=Days.to.Superacion,fill="23-24"), alpha=0.2,binwidth=7) + labs(x="Days to approval", y="Number of objectives") + theme_bw()
 @
 
 Figure \ref{fig:histogram.diff} shows the histogram of this difference for every objective in every course; this already shows differences between the different courses, that go beyond the different number of students; the first two courses had approximately the same number of students (although, during 21-22, the number of {\em active} students, those that showed up at least one or submitted at least one objective, was much higher), while this year had less students. However, 21-22 and 23-24 show the same distribution, with the mode being student overcoming the objective in 1 week or less, while 22-23 shows that most students took between 1 and 2 weeks to pass every objective. This already shows the descriptive power of this metric: we already know that the results during 22-23 were not good, and this is correlated with the fact that they needed more time to pass every objective.
 
+This metric, however, does not distinguish between students who passed and those who fell short of objective number 5, the minimum requirement. Will time-to-pass be a good predictor of success?
+
+<<boxplot.pass, echo=FALSE, warning=FALSE, fig.pos="h!tb", fig.cap="Boxplot of the difference between the time of submission and the time of approval for every objective, grouped by whether the student passed or not.">>=
+ggplot(entregas.data, aes(x=as.factor(Aprobado), y=Days.to.Superacion, fill=as.factor(Aprobado))) + geom_boxplot(notch = T) + labs(x="Pass", y="Days to approval") + theme_bw()
+@
 \bibliographystyle{ACM-Reference-Format}
 \bibliography{../rpg.bib,../dev.bib, ../agile.bib,../learning-analytics.bib,../pbl.bib}
 
